--- a/popup.html
+++ b/popup.html
@@ -5,140 +5,219 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WhatsApp Extension</title>
     <style>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
+        overflow: hidden;
+      }
+
       #warris-body {
         width: 100vw;
         height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
-        background: #00000075;
+        background: rgba(0, 0, 0, 0.75);
+        padding: 20px;
+        overflow: auto;
       }
 
       .waris-content {
         background-color: white;
-        box-shadow: 0px 8px 24px #00000042;
+        box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.26);
         border-radius: 10px;
         padding: 20px;
-        width: 90%;
-        max-width: 400px;
+        width: 100%;
+        max-width: 450px;
+        max-height: 90vh;
+        overflow-y: auto;
+        position: relative;
+      }
 
-        h2 {
-          font-size: 25px;
-          font-weight: bold;
-          text-align: center;
-          color: #0ea50e;
-          margin: 0 0 15px;
-          font-weight: bold;
-        }
+      .waris-content h2 {
+        font-size: 24px;
+        font-weight: bold;
+        text-align: center;
+        color: #0ea50e;
+        margin: 0 0 20px 0;
+        padding-right: 60px; /* Space for close button */
+      }
 
-        select,
-        input[type="file"],
-        button {
-          width: 100%;
+      .waris-content select,
+      .waris-content input[type="file"],
+      .waris-content button {
+        width: 100%;
+        padding: 12px;
+        font-size: 14px;
+        border-radius: 6px;
+        border: 1px solid #d1d5db;
+        cursor: pointer;
+        margin-bottom: 8px;
+      }
+
+      .waris-content label {
+        display: block;
+        font-size: 14px;
+        font-weight: 500;
+        color: #374151;
+        margin-bottom: 6px;
+      }
+
+      .opsContainer {
+        margin: 20px 0;
+      }
+
+      .waris-content select {
+        background-color: white;
+        color: #1f2937;
+        outline: none;
+        transition: border-color 0.2s ease;
+      }
+
+      .waris-content select:focus {
+        border-color: #0ea50e;
+        box-shadow: 0 0 0 2px rgba(14, 165, 14, 0.2);
+      }
+
+      .waris-content option {
+        padding: 8px;
+      }
+
+      .fileUpload {
+        margin: 20px 0;
+      }
+
+      #headerSelectSection {
+        margin: 15px 0;
+      }
+
+      #headerSelectSection div {
+        margin: 15px 0;
+      }
+
+      .waris-content button {
+        background-color: #0ea50e;
+        color: white;
+        font-weight: 600;
+        transition: all ease-in-out 0.2s;
+        border: none;
+      }
+
+      .waris-content button:hover {
+        background-color: #0a750a;
+        transform: translateY(-1px);
+      }
+
+      .statusContainer {
+        margin: 20px 0;
+      }
+
+      .hidden {
+        display: none !important;
+      }
+
+      #statusLog {
+        min-height: 120px;
+        max-height: 200px;
+        overflow-y: auto;
+        background: #f9fafb;
+        border: 1px solid #d1d5db;
+        border-radius: 6px;
+        padding: 12px;
+        font-size: 13px;
+        color: #1f2937;
+        line-height: 1.4;
+      }
+
+      #statusLog div {
+        margin-bottom: 4px;
+        word-wrap: break-word;
+      }
+
+      #close-overlay {
+        color: grey;
+        border: none;
+        background: none !important;
+        padding: 5px;
+        cursor: pointer;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        z-index: 10001;
+        width: auto;
+        font-size: 20px;
+        font-weight: 900;
+        transition: color 0.2s ease;
+      }
+
+      #close-overlay:hover {
+        color: #b91c1c;
+      }
+
+      /* Responsive design */
+      @media (max-width: 480px) {
+        #warris-body {
           padding: 10px;
-          font-size: 14px;
-          border-radius: 4px;
-          border: 1px solid #d1d5db;
-          cursor: pointer;
         }
 
-        label {
-          display: block;
-          font-size: 15px;
-          font-weight: 500;
-          color: #615f5f;
-          margin-bottom: 4px;
+        .waris-content {
+          padding: 15px;
+          max-height: 95vh;
         }
 
-        .opsContainer {
-          margin: 20px 0;
-        }
-
-        select {
-          background-color: white;
-          color: #1f2937;
-          outline: none;
-          &:focus {
-            box-shadow: 0 0 0 2px #0ea50e;
-          }
-        }
-
-        option {
-          padding: 3px;
-        }
-
-        .fileUpload {
-          margin: 20px 0px;
-        }
-        #headerSelectSection {
-          margin: 10px 0;
-          margin-bottom: 20px;
-          div {
-            margin: 10px 0;
-          }
-        }
-
-        button {
-          background-color: #0ea50e;
-          color: white;
-          font-weight: bolder;
-          transition: all ease-in-out 0.1s;
-
-          &:hover {
-            background-color: #0a750a;
-          }
-        }
-
-        .statusContainer {
-          margin: 10px 0;
-        }
-
-        .hidden {
-          display: none;
-        }
-
-        #statusLog {
-          height: 80px;
-          overflow-y: auto;
-          background: #e6ece6;
-          border: 1px solid #d1d5db;
-          border-radius: 4px;
-          padding: 8px;
-          font-size: 13px;
-          color: #1f2937;
+        .waris-content h2 {
+          font-size: 20px;
+          padding-right: 50px;
         }
 
         #close-overlay {
-          background: red;
-          color: white;
-          border: none;
-          padding: 5px 10px;
-          border-radius: 3px;
-          cursor: pointer;
-          position: absolute;
           top: 10px;
           right: 10px;
-          z-index: 10001;
-          width: 10%;
+          padding: 6px 10px;
+          font-size: 12px;
         }
+      }
+
+      /* Scrollbar styling */
+      .waris-content::-webkit-scrollbar,
+      #statusLog::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      .waris-content::-webkit-scrollbar-track,
+      #statusLog::-webkit-scrollbar-track {
+        background: #f1f1f1;
+        border-radius: 3px;
+      }
+
+      .waris-content::-webkit-scrollbar-thumb,
+      #statusLog::-webkit-scrollbar-thumb {
+        background: #c1c1c1;
+        border-radius: 3px;
+      }
+
+      .waris-content::-webkit-scrollbar-thumb:hover,
+      #statusLog::-webkit-scrollbar-thumb:hover {
+        background: #a8a8a8;
       }
     </style>
   </head>
   <body id="warris-body">
     <div class="waris-content">
-      <button id="close-overlay">✕ Close</button>
+      <button id="close-overlay">✕</button>
 
       <h2>📩 WhatsApp Bulk Tool</h2>
 
       <!-- Select Operation -->
       <div class="opsContainer">
-        <label for="operation" class="block text-sm font-medium text-gray-700"
-          >Choose Operation</label
-        >
-        <select
-          id="operation"
-          class="w-full border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500"
-        >
+        <label for="operation">Choose Operation</label>
+        <select id="operation">
           <option value="bulk">Send Bulk Messages</option>
           <option value="verify">Verify Numbers Only</option>
         </select>
@@ -156,23 +235,18 @@
 
       <!-- Column Headers -->
       <div id="headerSelectSection" class="hidden">
-        <div class="space-y-1">
+        <div>
           <label for="phoneHeaderSelect">Phone Number Column</label>
           <select id="phoneHeaderSelect"></select>
         </div>
-        <div class="space-y-1">
+        <div>
           <label for="messageHeaderSelect">Message Column</label>
           <select id="messageHeaderSelect"></select>
         </div>
       </div>
 
       <!-- Start Button -->
-      <button
-        id="startBtn"
-        class="w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded-lg text-lg font-semibold transition duration-300"
-      >
-        🚀 Start Operation
-      </button>
+      <button id="startBtn">🚀 Start Operation</button>
 
       <!-- Status Log -->
       <div class="statusContainer">
